# klint

./: Cargo.toml  README.md  build.rs  rust-toolchain  shell.nix
.cargo/: config
.github/workflows/: CI.yml  ci.yml  nightly.yml
doc/: atomic_context.md  infallible_allocation.md
src/: atomic_context.rs  attribute.rs  ctxt.rs  infallible_allocation.rs  main.rs  mir.rs  monomorphize_collector.rs  schema.sql  serde.rs  symbol.rs  util.rs
src/mir/: drop_shim.rs  schema.sql  serde.rs
src/preempt_count/: adjustment.rs  annotation.rs  check.rs  check_indirect.rs  dataflow.rs  expectation.rs  mod.rs
tests/: compile-test.rs
tests/ui/: adjustment.rs  adjustment.stderr  annotation.rs  annotation.stderr  box_free.rs  box_free.stderr  calltrace.rs  calltrace.stderr  drop-array.rs  drop-array.stderr  drop-slice.rs  drop-slice.stderr  function-pointer.rs  function-pointer.stderr  iflet.rs  iflet.stderr  infinite_recursion.rs  infinite_recursion.stderr  recursion.rs  recursion.stderr  upcasting.rs  upcasting.stderr  vtable.rs  vtable.stderr  waker.rs  waker.stderr
